tests/snapshots/cli_configure_repository__cli_clear_config.snap
---
source: tests/cli_configure_repository.rs
expression: result
---
[project]
name = "test"
r_version = "4.4"
repositories = []
dependencies = [
    "dplyr",
]
