tests/snapshots/cli_configure_repository__cli_conflict_flags_stderr.snap
---
source: tests/cli_configure_repository.rs
expression: stderr_str
---
error: the argument '--first' cannot be used with '--last'

Usage: rv configure repository add --url <URL> --first --config-file <CONFIG_FILE> <ALIAS>

For more information, try '--help'.
