tests/snapshots/cli_configure_repository__cli_error_missing_alias_stderr.snap
---
source: tests/cli_configure_repository.rs
expression: "String::from_utf8_lossy(&output.stderr)"
---
Must specify either target alias or --match-url
