tests/snapshots/cli_configure_repository__cli_replace_new_alias_config.snap
---
source: tests/cli_configure_repository.rs
expression: result
---
[project]
name = "test"
r_version = "4.4"
repositories = [
    { alias = "posit-new", url = "https://packagemanager.posit.co/cran/latest" }
]
dependencies = [
    "dplyr",
]
