tests/snapshots/cli_configure_repository__cli_replace_new_alias_stdout.snap
---
source: tests/cli_configure_repository.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
Repository replaced successfully - new alias: 'posit-new', URL: https://packagemanager.posit.co/cran/latest
